[package]
name = "palmtop-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Telemetry for palmtop"

[dependencies]
eyre = "0.6.8"
chrono = "0.4.22"
tracing = "0.1.36"
ansi_term = "0.12.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "env-filter",
    "ansi",
    "tracing-log",
] }
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"
